got earth and did UI for GamePage (almost)

--- a/country-guessing-game/src/Styles/style.css
+++ b/country-guessing-game/src/Styles/style.css
@@ -10,6 +10,15 @@
     background-size: cover;
 }
 
+#chartdiv {
+    width: 700px;
+    height: 700px;
+}
+
+#chartdiv:hover {
+    cursor: pointer;
+}
+
 @keyframes bgc-effect {
     0% {
         background-position: 0% 0%;
